Fix nav bar content spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,6 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:600&display=swap');
 html, body { height: 100%; }
 body { margin: 0; font-family:'Nunito Sans', Helvetica Neue, sans-serif; background-color: #f7f7f7}
+.w-max-content {
+  width: max-content;
+}
